--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fuse.js": "^7.0.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
